Pull request #153: WDZO-1393: Add design tab at ClientApps
Squashed commit of the following:

commit 959834e0e426e4c9eec57aca00d09d6d00041616
Merge: e43a4fe 3583ee1
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Mar 22 17:10:44 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1393

commit e43a4fe0815947454484169af71cb2c65661b6de
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Mar 22 13:59:35 2021 +0300

    WDZO-1393: Disable designSettings

commit d710d423064fe4f71bc13b61547f79210bc0894a
Merge: 3aa7a1a be1c050
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon Mar 22 13:48:28 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1393

commit 3aa7a1ada4115f4cb22db129c3321ed836f163ca
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Mar 17 16:04:49 2021 +0300

    WDZO-1393: API update

commit c5459afa202bdcb0d5e962c14e56e5bea6491924
Merge: b117c1a eb1ae1f
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Mar 17 15:20:24 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1393

commit b117c1abec709dedd8796eee6e0add479d8e58b0
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Mar 10 16:42:15 2021 +0300

    WDZO-1393: Default value creating fix and remove theme deleting

commit 04fef90efb8ae58a978fdfd650834534d462e193
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Fri Mar 5 16:56:44 2021 +0300

    WDZO-1393: Changed the logic of the default value for design parameters
    and changed default pictures

commit e54bf3e55a29a5a49c38ac5785a9c1b6f1d75738
Merge: 2ff5d72 c409ea2
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Wed Mar 3 11:14:33 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into fe

--- a/src/components/SelectTags/SelectTags.module.css
+++ b/src/components/SelectTags/SelectTags.module.css
@@ -1,8 +1,10 @@
-.selectWrapper {
-    background-color: #f8f8f8;
-    padding: 10px 30px 0px 30px;
-    margin-bottom: 25px;
-    height: 100%;
+/* select */
+.select {
+    background-color: #fff;
+    border: 1px solid #d9d9d9;
+    display: flex;
+    height: 40px;
+    transition: border 0.3s;
 }
 
 .select :global(.ant-select-selector) {
@@ -13,82 +15,91 @@
     width: 100%;
 }
 
-.selectedCount {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(9, 165, 82, 0.08);
-    margin-left: 10px;
-    text-align: center;
-    width: 53px;
-    height: 24px;
-    border-radius: 41%;
-    background-color: rgba(9, 165, 82, 0.08);
-    margin-left: 10px;
-    text-align: center;
-    border-radius: 40%;
-    color: #09A552;
+.select :global(.ant-select-arrow .anticon:not(.ant-select-suffix):not([aria-label='close'])) {
+    pointer-events: none;
 }
 
-.selectCategories :global(.ant-select-multiple .ant-select-selection-item) {
-    background:transparent;
+.select:global(.ant-select-open .anticon:not([aria-label='close'])) {
+    transform: rotate(-180deg);
+}
+
+.select :global(.ant-select-selection-item) {
+    background-color: transparent;
     border: none;
 }
 
-.tagSelect:global(.ant-select-selection-overflow-item){
+.select :global(.ant-select-selection-search-input) {
+    display: none;
+}
+
+.select :global(.ant-select-selection-overflow) {
+    max-width: 85%;
+}
+
+.select:active,
+.select:focus,
+.select:hover {
+    border-color: #09a552;
+}
+
+.select :global(.ant-select-selection-overflow) {
+    max-width: 85%;
+}
+
+.select:global(.ant-select:not(.ant-select-disabled):hover .ant-select-selector) {
+    border-color: #09a552;
+}
+
+.select :global(.ant-select-selection-search-input) {
+    display: none;
+}
+
+.select:global(.ant-select:not(.ant-select-customize-input) .ant-select-selector) {
+    border: none;
+}
+
+.select:global(.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input)
+        .ant-select-selector) {
+    border-color: #09a552;
+}
+/*  /select */
+
+/* tagSelect */
+.tagSelect {
+    padding: 4px 10px;
+    background-color: rgba(9, 165, 82, 0.08);
+    color: #09a552;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
     margin-left: 5px;
 }
 
-.tagSelect:global(.ant-select-selection-overflow-item:first-child){
+.tagSelect:global(.ant-select-selection-overflow-item) {
+    margin-left: 5px;
+}
+
+.tagSelect:global(.ant-select-selection-overflow-item:first-child) {
     margin: 0;
 }
 
-.select :global(.ant-select-selection-search-input) {
-    display: none;
+.tagSelect > p {
+    margin-right: 3px;
 }
 
-.select :global(.ant-select-selection-overflow) {
-    max-width: 85%;
+.tagSelect:global(.ant-select-selection-overflow-item) {
+    margin-left: 5px;
 }
 
-.select {
-    background-color: #fff;
-    border: 1px solid #d9d9d9;
-    display: flex;
-    height: 40px;
+.tagSelect:global(.ant-select-selection-overflow-item:first-child) {
+    margin: 0;
 }
+/* /tagSelect */
 
+/* dropdown */
 .dropdown :global(.ant-select-item-option-selected:not(.ant-select-item-option-disabled)) {
     background: transparent;
     background-color: transparent;
-}
-
-.select:active, .select:focus, .select:hover {
-    border-color: #09a552;
-}
-
-.arrowActive {
-    transform: rotate(180deg);
-}
-
-.select :global(.ant-select-selection-overflow) {
-    max-width: 85%;
-}
-
-.selectedMenu {
-    display: inline-flex;
-}
-
-.select:global(.ant-select:not(.ant-select-disabled):hover .ant-select-selector){
-    border-color: #09a552;
-}
-
-.select :global(.ant-select-selection-search-input) {
-    display: none;
-}
-
-.select:global(.ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input) .ant-select-selector){
-    border-color:#09a552;
 }
 
 .dropdown :global(.ant-checkbox-indeterminate .ant-checkbox-inner::after) {
@@ -109,15 +120,30 @@
 .dropdown :global(.ant-select-item-option-state) {
     display: none;
 }
+/* /dropdown */
 
-.tagSelect {
-    padding: 4px 10px;
-    background-color: rgba(9, 165, 82, 0.08);
-    color:#09a552;
-    border-radius: 25px;
+.selectText {
+    max-width: 120px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.arrowActive {
+    transform: rotate(180deg);
+}
+
+.mrr {
+    margin-right: 10px;
+}
+
+.icon {
+    margin: 0 5px;
+    font-size: 15px;
+}
+.closeIcon {
     display: flex;
     align-items: center;
-    margin-left: 5px;
 }
 
 .suffixBlock {
@@ -135,52 +161,19 @@
     justify-content: space-between;
     background-color: transparent;
 }
-
-.mrt {
-    margin-top: 10px;
-}
-
-.tagSelect:global(.ant-select-selection-overflow-item){
-    margin-left: 5px;
-}
-
-.tagSelect:global(.ant-select-selection-overflow-item:first-child){
-    margin: 0;
-}
-
-.select:global(.ant-select-arrow){
-    pointer-events: none ;
-}
-
-.select:global(.ant-select-arrow .anticon:not(.ant-select-suffix)){
-    pointer-events: none !important ;
-}
-
-.selectText {
-    max-width: 120px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.select :global(.ant-select-selection-item) {
-    background-color:transparent;
-    border: none;
-}
-
-.mrr {
-    margin-right: 10px;
-}
-
-.icon {
-    margin: 0 5px;
-    font-size: 15px;
-}
-.closeIcon {
+.selectedCount {
     display: flex;
     align-items: center;
-}
-
-.closeIcon svg {
-    fill: #09A552;
+    justify-content: center;
+    background-color: rgba(9, 165, 82, 0.08);
+    margin-left: 10px;
+    text-align: center;
+    width: 40px;
+    height: 28px;
+    border-radius: 16px;
+    background-color: rgba(9, 165, 82, 0.08);
+    margin-left: 10px;
+    text-align: center;
+    border-radius: 40%;
+    color: #09a552;
 }
