--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepTextAndImage/TextBlock/TextBlock.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepTextAndImage/TextBlock/TextBlock.module.css
@@ -10,3 +10,7 @@
 .textBlock :global(.ant-form-item) {
     margin-bottom: 0;
 }
+
+.textBlock :global(div[role = 'alert']) {
+    margin-top: 5px;
+}
