--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,9 @@ input.ant-input:placeholder-shown ~ span {
 
 .ant-checkbox-input:hover + .ant-checkbox-inner,
 .ant-checkbox-input:focus + .ant-checkbox-inner,
-.ant-checkbox-input:active + .ant-checkbox-inner {
+.ant-checkbox-input:active + .ant-checkbox-inner,
+.ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.ant-checkbox:hover .ant-checkbox-inner {
     border-color: #09a552;
 }
 
@@ -127,6 +129,26 @@ input.ant-input:placeholder-shown ~ span {
     border-color: #09a552;
 }
 
+.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled),
+.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover,
+.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):first-child {
+    color: #09a552;
+    border-color: #09a552;
+}
+
+.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled)::before,
+.ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled):hover::before {
+    background-color: #09a552;
+}
+
+.ant-radio-button-wrapper:hover:not(.ant-radio-button-wrapper-disabled) {
+    color: #09a552;
+}
+
+.ant-radio-button-wrapper-checked:not([class*=' ant-radio-button-wrapper-disabled']).ant-radio-button-wrapper:first-child {
+    border-right-color: #09a552;
+}
+
 .ant-input-clear-icon > svg,
 .ant-picker-clear svg {
     fill: transparent;
@@ -166,6 +188,14 @@ input.ant-input:placeholder-shown ~ span {
 .ant-notification.ant-notification-topRight > div {
     display: flex;
     flex-direction: column-reverse;
+}
+
+.ant-form-item .ant-input-textarea-show-count::after {
+    text-align: left;
+    position: unset;
+    margin-top: 4px;
+    float: left;
+    margin-bottom: -10px;
 }
 
 /*.ant-btn-ghost,*/
