--- a/src/containers/DzoPage/DzoForm/DzoForm.module.css
+++ b/src/containers/DzoPage/DzoForm/DzoForm.module.css
@@ -1,4 +1,6 @@
 .wrapper {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
 }
@@ -43,7 +45,7 @@
 }
 
 .btnGroup {
-    margin: 24px 0 24px;
+    margin: 24px 0;
 }
 
 .btnGroup > button {
