Pull request #172: WDZO-1663: Add message for empty Dashboard, refactor HeaderWithActions and dependent components.
Squashed commit of the following:

commit a8cc7168cc449b676bc67434868644a39b145264
Merge: 1cd53c5 2f99948
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Mar 29 07:49:50 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1663

commit 1cd53c5fe24d0521f44c268201f22527837c084f
Merge: 79ed239 c516367
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Tue Mar 23 10:21:15 2021 +0300

    Merge branch 'develop' of https://sbtatlas.sigma.sbrf.ru/stash/scm/mobiledevprojects/distributor-admin into feature/WDZO-1663

commit 79ed2395d65f4b8e4b1c3e10bc73a033bad6e031
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Wed Mar 17 18:10:59 2021 +0300

    WDZO-1663: fix bug in HeaderWithActions and edit dependent components

commit 01a58e1faa5f80e612a56d31040ce1787f45b1ef
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Wed Mar 17 14:14:57 2021 +0300

    WDZO-1663: fix dashboard await sleep and add z-index style

commit dc80b983018a05f460b0b37062172b848030cc75
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Wed Mar 17 12:30:50 2021 +0300

    WDZO-1663: Refactor HeaderWithActions and dependent components

commit e35d6e4b7aacc240410f61253467061fdb315dbe
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Wed Mar 17 12:25:46 2021 +0300

    WDZO-1663: Add message for empty Dashboard

--- a/src/components/HeaderWithActions/HeaderWithActions.module.css
+++ b/src/components/HeaderWithActions/HeaderWithActions.module.css
@@ -30,39 +30,14 @@
     display: flex;
 }
 
-button.button {
+.buttons > button {
     margin-right: 10px;
-    font-family: SBSansText-medium;
 }
 
-button.button.btn_primary {
-    background: #09a552;
-    border-color: #09a552;
-    font-family: SBSansText;
+.buttons > :global(.ant-input-affix-wrapper) {
+    min-width: 250px;
 }
 
-button.button.btn_primary:hover,
-button.button.btn_primary:focus {
-    color: #ffffff;
-}
-
-button.button:hover,
-button.button:focus {
-    border-color: #09a552;
-    color:  #09a552;
-}
-
-.searchInput span[role='img'] {
+.buttons > :global(.ant-input-affix-wrapper) span[role='img'] {
     color: #c2c8d2;
-}
-
-span.searchInput:hover,
-span.searchInput:focus {
-    border-color: #09a552;
-}
-
-span.searchInput:focus,
-span.searchInput:global(.ant-input-affix-wrapper-focused) {
-    box-shadow: 0 0 0 2px rgba(33, 186, 114, 0.2);
-    border-color: #09a552;
 }
