--- a/src/index.css
+++ b/src/index.css
@@ -169,16 +169,17 @@ input.ant-input:placeholder-shown ~ span {
 .ant-notification.ant-notification-topRight {
     overflow-y: scroll;
     overflow-x: hidden;
-    max-height: 100%;
-    top: 0 !important;
-    padding: 24px 28px 16px;
-    padding-left: 28px;
-    padding-right: 28px;
-    padding-top: 24px;
-    padding-bottom: 16px;
+    max-height: calc(100% - 63px);
+    top: 63px !important;
+    pointer-events: none;
+    padding: 0 28px 16px;
     margin-right: 0;
     margin-bottom: 0;
     scrollbar-width: none;
+}
+
+.ant-notification.ant-notification-topRight .ant-notification-notice {
+    pointer-events: auto;
 }
 
 .ant-notification.ant-notification-topRight::-webkit-scrollbar {
@@ -188,6 +189,14 @@ input.ant-input:placeholder-shown ~ span {
 .ant-notification.ant-notification-topRight > div {
     display: flex;
     flex-direction: column-reverse;
+}
+
+#container-for-clearAll {
+    position: fixed;
+    top: 20px;
+    right: 100px;
+    z-index: 1011;
+    box-shadow: 0px 3px 16px 1px rgba(0, 0, 0, 0.46);
 }
 
 .ant-form-item .ant-input-textarea-show-count::after {
