Pull request #195: WDZO-1806: change visibility promo-campaign in bundle depending on the group type
Squashed commit of the following:

commit e3cddc9b1c32cea0ae4e38849b61579e4a19caf6
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Thu Apr 8 10:44:48 2021 +0300

    WDZO-1806: fix isVisibileButton in relatedPromoCampaignForm

commit 634641c39f9be03753ba107c4efef17676f5a887
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Wed Apr 7 16:17:23 2021 +0300

    WDZO-1806: fix the visibility of the add button depending on the number of available promo-campaigns

commit a26bc77f9e51fd8facf2fb0c5008dc64749e4096
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Wed Apr 7 14:23:05 2021 +0300

    WDZO-1806: add exclusion from the list of related promo campaigns in bundle

commit 83be30afe533470f107c1bea1d01e13b45522e5c
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Tue Apr 6 14:43:54 2021 +0300

    WDZO-1806: change visibility promo-campaign in bundle depending on the group type

--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,10 @@ textarea.ant-input:focus {
     box-shadow: 0 0 0 1px rgba(141, 220, 183, 0.2);
 }
 
+.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
+    border-color: #09a552;
+}
+
 input.ant-input:placeholder-shown ~ span {
     display: none;
 }
