Pull request #189: WDZO-1724: add users permissions by loginType in UserForm and UsersList. Add columns `role` and `loginType` in Users table
Squashed commit of the following:

commit fac986c6aba53e033f107bb5a7efb6fafc0dee2f
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Apr 9 15:15:08 2021 +0300

    WDZO-1724: change file template for old file

commit e268c5fab148d29b3b9ef8c1d639497c687c7f3b
Merge: f892d46 8040eac
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Apr 9 15:09:44 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-1760

commit f892d46218c0295d733a3031a7545250f85efe23
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Apr 9 11:47:50 2021 +0300

    WDZO-1724: hide change user loginType

commit fa6b26bb3a58a11d3ee1c9cc89e0c88d40aff42a
Merge: 41c0e62 9df8fa4
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Apr 9 08:26:09 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-1760

commit 41c0e62ef45eeac626495cc50c294d81388e8d20
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Apr 8 16:57:34 2021 +0300

    WDZO-1724: add newPassword in notification after update loginType to PASSWORD

commit e335bf7b8a33597dac3a1c4e4f02c9fb1b8793d0
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Apr 8 13:58:06 2021 +0300

    WDZO-1761: fix same key warning

commit 2a4e31252f974d5bdcf34e2e6ebf6068d2a548b1
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Apr 8 11:45:27 2021 +0300

    WDZO-1761: disable reset pass if choosed user with loginType !== PASSWORD

commit 324601244cb728c7bf3bb2fffbe8721f2d546c30
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Apr 8 10:06:17 2021 +0300

    WDZO-1761: Add parner page with only usersPage access

commit ff6e4a1c92e56832ca6c5065c5f869019c39dfaf
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Wed Apr 7 17:13:01 2021 +

--- a/src/index.css
+++ b/src/index.css
@@ -52,14 +52,11 @@ body, ul, li, p {
 .ant-input-affix-wrapper:hover,
 .ant-input-affix-wrapper:focus,
 .ant-input-affix-wrapper-focused,
+.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover,
 textarea.ant-input:hover,
 textarea.ant-input:focus {
     border-color: #09a552;
     box-shadow: 0 0 0 1px rgba(141, 220, 183, 0.2);
-}
-
-.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
-    border-color: #09a552;
 }
 
 input.ant-input:placeholder-shown ~ span {
