--- a/src/containers/UsersPage/UserPage/UserForm.module.css
+++ b/src/containers/UsersPage/UserPage/UserForm.module.css
@@ -38,7 +38,7 @@
 
 .formStyle {
     background-color: #f7f7f7;
-    padding: 25px 25px 56px 25px ;
+    padding: 28px 25px ;
     margin-bottom: 15px;
 }
 
@@ -75,8 +75,13 @@
 }
 
 .labelCol {
+    flex: 1 0 33%;
     min-height: 40px;
-    flex-basis: 40%;
+}
+
+.selector {
+    width: 250px;
+    margin-top: 8px;
 }
 
 .buttonsContainer {
@@ -95,9 +100,14 @@
 .formWrapper {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: baseline;
     width: 100%;
     max-width: 1100px;
+}
+
+.formWrapper .formWrapper {
+    margin-top: 25px;
 }
 
 .formWrapper :global(.ant-input-affix-wrapper:hover),
@@ -134,4 +144,16 @@
     color: #09a552;
     margin-left: 15px;
     border-radius: 25px;
+}
+
+.selectsRow {
+    margin-top: 25px;
+    width: 100%;
+    max-width: 1100px;
+}
+
+.selectsRow > div:first-child {
+    flex-basis: 30%;
+    max-width: 30%;
+    margin-right: 20px;
 }
