--- a/src/containers/UsersPage/UserPage/UserSkeletonLoading/UserSkeletonLoading.module.css
+++ b/src/containers/UsersPage/UserPage/UserSkeletonLoading/UserSkeletonLoading.module.css
@@ -2,17 +2,24 @@
     padding: 25px;
 }
 
-.labelsWrapperSkeleton {
-    display: flex;
+.mainBlock {
     margin-top: 30px;
     padding: 20px;
-    width: 100%;
-    height: 110px;
     background-color: #f7f7f7;
 }
 
-.labelsWrapperSkeleton:nth-child(3) {
+.mainBlock:nth-child(3) {
     margin-top: 15px;
+}
+
+.labelsWrapperSkeleton {
+    display: flex;
+    width: 100%;
+    height: 65px;
+}
+
+.labelsWrapperSkeleton ~ .labelsWrapperSkeleton {
+    margin-top: 25px;
 }
 
 .labelsSkeleton {
@@ -24,7 +31,7 @@
 }
 
 .labelsSkeleton:first-child {
-    flex-basis: 30%;
+    flex-basis: 33%;
 }
 
 .labelsSkeleton :global(.ant-skeleton) {
