--- a/src/containers/UsersPage/UserPage/UsersList/UsersList.module.css
+++ b/src/containers/UsersPage/UserPage/UsersList/UsersList.module.css
@@ -18,7 +18,6 @@
     color: #333f48;
     font-size: 16px;
     font-weight: bold;
-    margin-right: 30px;
 }
 
 .inputSearch {
@@ -40,6 +39,14 @@
 .section {
     display: flex;
     align-items: center;
+}
+
+.section > *:not(:last-child) {
+    margin-right: 10px;
+}
+
+.section > *:first-child {
+    margin-right: 30px;
 }
 
 .space {
