Pull request #217: WDZO-1923: change filename after success add\delete users by file. some refactoring
Squashed commit of the following:

commit b37cd5a054b6a23f0785e9ff09ca4ca67304f331
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Apr 22 13:43:38 2021 +0300

    WDZO-1923: fix naming for consts and props

commit 66f3c95a9fef1f620de87ff22197c8dd1fdb4343
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Apr 22 09:20:21 2021 +0300

    WDZO-1923: change filename after success add\delete users by file
    some refactoring

--- a/src/containers/UsersPage/UserPage/UsersList/EmptyUsersPage/EmptyUsersPage.module.css
+++ b/src/containers/UsersPage/UserPage/UsersList/EmptyUsersPage/EmptyUsersPage.module.css
@@ -18,4 +18,21 @@
 
 .buttonsContainer {
     display: flex;
+    margin-top: 15px;
+}
+
+.buttonsContainer > button {
+    margin-right: 5px;
+}
+
+.buttonsContainer a {
+    padding: 5px 15px;
+    border-radius: 2px;
+    cursor: pointer;
+    color: #000000;
+    background-color: #EDEEEF;
+}
+
+.buttonsContainer a:hover {
+    color: #000000;
 }
