Pull request #221: WDZO-1910: add settings for detail button in promoCampaignForm
Squashed commit of the following:

commit 0ec8ebc9c3364b1066cd6bc0c59ec049c942be37
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Tue Apr 27 18:29:44 2021 +0300

    WDZO-1910: fix standalone initial value

commit f3f5ce48f29e1552e4331510252c0d6f72babf8d
Merge: d1f6b52 d5b117f
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue Apr 27 16:38:59 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-1910

commit d1f6b52f5398a30e50efb1def830e011fafbe78a
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue Apr 27 14:45:16 2021 +0300

    WDZO-1910: add settings for detail button in promoCampaignForm

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
@@ -24,6 +24,24 @@
     margin-bottom: 15px;
 }
 
+.formGroup {
+    display: flex;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    border: 1px solid #d9d9d9;
+    border-radius: 5px;
+}
+
+.formGroupLabel {
+    position: absolute;
+    top: -11px;
+    left: 5px;
+    padding: 0 5px;
+    background-color: #f8f8f8;
+}
+
 .infoTitle {
     margin-bottom: 7px;
     font-size: 16px;
