Pull request #224: WDZO-1953: removed deleted client apps from tempalte users upload modal
Squashed commit of the following:

commit bdc6e49d9939d01c53c0852a2cefa3f82d326b24
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue May 11 11:44:57 2021 +0300

    fix scroll for notifications

commit ebd345b4f8d66a784b7c1daf00a46f666d03e773
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue May 11 08:28:25 2021 +0300

    WDZO-1953: fixes

commit e7cbabbbf7fc6c86df5703855fcd9fbf093c3e26
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Apr 29 11:41:30 2021 +0300

    WDZO-1953: removed deleted client apps from tempalte users upload modal

--- a/src/index.css
+++ b/src/index.css
@@ -172,8 +172,6 @@ input.ant-input:placeholder-shown ~ span {
     overflow-x: hidden;
     max-height: calc(100% - 63px);
     top: 63px !important;
-    pointer-events: none;
-    padding: 0 28px 16px;
     margin-right: 0;
     margin-bottom: 0;
     scrollbar-width: none;
@@ -188,6 +186,8 @@ input.ant-input:placeholder-shown ~ span {
 }
 
 .ant-notification.ant-notification-topRight > div {
+    pointer-events: none;
+    padding: 0 28px;
     display: flex;
     flex-direction: column-reverse;
 }
