Pull request #229: WDZO-1827: Add pages for consents
Squashed commit of the following:

commit f63378bdc72fd80eada5ab804668b68dede74f41
Merge: ea76612 06df31a
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri May 28 14:57:54 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-1827

commit ea7661200aeb5a4a057a5e1e1b65edea07357ac5
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri May 28 08:02:22 2021 +0300

    WDZO-1827: fix tests

commit dae1a9e93b36a3d89f5476bfc9032e5466af321d
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue May 25 17:07:33 2021 +0300

    WDZO-1827: fix styles for ul tag in RichText. refactor code validating pattern

commit cb40db023c0ce1d2152764493773b1fed6558fba
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue May 25 16:42:13 2021 +0300

    WDZO-1827: fix quotes replace

commit c74fc17a9364140a4c3678b2df2657866bdb9529
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue May 25 15:28:33 2021 +0300

    WDZO-1827: fix create consent, fix validating for consent's text, fix show delete consent button, fix quotes for send

commit ab2887c51d5ca2c334aa8f5ab4fd5fe8a2d219ef
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon May 24 14:55:06 2021 +0300

    WDZO-1827: add loading while sending request

commit 3a0d302df9d57d3f1ccfd71fd1f27c5e27509124
Merge: d79c138 123d323
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon May 24 14:46:08 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-1827

commit d79c138e4cecc29f7c5207f7663b0ff2ae21a34f
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon May 24 14:28:25 2021 +0300

    WDZO-1827: some refactoring styles

commit 69c56bead3124a3650c35371679eececdff0802a
Author: OUT-Litvin-OA <OALitvin@sberbank.ru>
Date:   Mon May 24 12:29:51 2021 +0300

    WDZO-1827: added privacy policy block to ClientAppProperties. c

--- a/src/containers/ClientAppPage/ClientAppForm/ClientAppProperties/ClientAppProperties.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/ClientAppProperties/ClientAppProperties.module.css
@@ -3,7 +3,6 @@
 }
 
 .buttonGroup {
-    margin-top: 15px;
     margin-left: 15px;
 }
 
@@ -12,16 +11,11 @@
 }
 
 .container {
-    margin-left: 15px;
     background-color: #f8f8f8;
     padding: 20px;
-    margin-right: 30px;
+    margin: 0 30px 15px 15px;
 }
 
 .container :global(.ant-row:last-child .ant-form-item) {
     margin-bottom: 0;
-}
-
-.mrt {
-    margin-top: 15px;
 }
