--- a/src/components/SelectTags/SelectTags.module.css
+++ b/src/components/SelectTags/SelectTags.module.css
@@ -156,7 +156,7 @@
 .tagPlaceholder {
     order: 1;
     display: flex;
-    width: 100px;
+    max-width: 100px;
     margin-left: 5px;
     justify-content: space-between;
     background-color: transparent;
