--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ textarea.ant-input:focus {
     box-shadow: 0 0 0 1px rgba(141, 220, 183, 0.2);
 }
 
-input.ant-input:placeholder-shown ~ span {
+input.ant-input:placeholder-shown ~ .ant-input-suffix .anticon-close-circle {
     display: none;
 }
 
@@ -158,6 +158,7 @@ input.ant-input:placeholder-shown ~ span {
     background: url(./static/images/cross.svg);
     margin-bottom: 3px;
 }
+
 .ant-select:not(.ant-select-disabled):hover .ant-select-selector{
     border-color: #09a552;
 }
