Pull request #234: TND-1489: Add link for video tour
Squashed commit of the following:

commit 7775a6d0dddc0e61d7aafc21709e99aebb156eb3
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Jun 18 09:44:14 2021 +0300

    TND-1489: rename VIDEO to videoLink

commit 1c319ded814c0fae0deaf2ea7a795660b91baab5
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jun 17 15:16:57 2021 +0300

    TND-1489: some refactoring and fixes

commit d2e4c32a7dd8face19547397900a2c8ead220716
Merge: 3ffdba6 1f5b78b
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jun 17 13:30:17 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/TND-1489

commit 3ffdba6b89cb0e92edce4bb015a0bf5f20d35933
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jun 10 13:56:08 2021 +0300

    TND-1489: Add link for video tour in DZO form
    add switch for disable video tour in promoCampaign

--- a/src/containers/DzoPage/DzoForm/DzoForm.module.css
+++ b/src/containers/DzoPage/DzoForm/DzoForm.module.css
@@ -53,14 +53,18 @@
 }
 
 .formContainer {
-    max-width: 800px;
+    max-width: 900px;
 }
 
-.cross {
-    cursor: pointer;
+.mainInfoRow {
+    max-width: 750px;
 }
 
-.container :global(.ant-select-item-option-selected:not(.ant-select-item-option-disabled)){
+.uploadImage {
+    max-width: 250px;
+}
+
+.container :global(.ant-select-item-option-selected:not(.ant-select-item-option-disabled)) {
     background-color: inherit;
 }
 
