--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepInfo/StepInfo.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignForm/PromoCampaignSteps/StepInfo/StepInfo.module.css
@@ -34,9 +34,10 @@
     background-color: #f8f8f8;
 }
 
+.clientApp,
 .promoCampaignName,
 .selectCategories {
-    max-width: 600px;
+    max-width: 550px;
 }
 
 .statusInfo {
