Pull request #241: TND-1948: add game_mechanics for clientApp settings
Squashed commit of the following:

commit 9872640af380f7fa63d6cbc8b6ec6fc81e980b60
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Jun 25 09:38:55 2021 +0300

    TND:-1948: update snapshot

commit 62c721616da0155e9f06645a12c9869b06235c5f
Merge: 6e50566 93f7395
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jun 24 10:54:02 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/TND-1948

commit 6e5056695266902cf2cdd26cc7e02576b624cfbd
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Wed Jun 23 09:01:52 2021 +0300

    TND-1948: add game_mechanics for clientApp settings

--- a/src/containers/ClientAppPage/ClientAppForm/ClientAppProperties/ClientAppProperties.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/ClientAppProperties/ClientAppProperties.module.css
@@ -19,3 +19,8 @@
 .container :global(.ant-row:last-child .ant-form-item) {
     margin-bottom: 0;
 }
+
+.row {
+    margin-top: 10px;
+    max-width: 950px;
+}
