--- a/src/containers/ClientAppPage/ClientAppForm/FormConstructor/FormConstructor.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/FormConstructor/FormConstructor.module.css
@@ -26,10 +26,14 @@
     content: none !important;
 }
 
-.propertiesRow:not(:nth-last-child(2)) {
+.propertiesRow:not(:nth-last-child(3)) {
     align-items: flex-end;
 }
 
 .propertiesRow {
     max-width: 950px;
+}
+
+.propertiesRow:not(:last-child) {
+    margin-bottom: 5px;
 }
