Pull request #247: WDZO-2164: add business role pages
Squashed commit of the following:

commit 0d77bf1e707da0a2aaf6456fd550f69394747c18
Merge: 3014b92 e5545c7
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jul 8 08:16:28 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-2164

commit 3014b9273e1f23aff56fad235d1cc082dbc4c702
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Jul 1 13:40:14 2021 +0300

    WDZO-2164: remove endDate from businessRole pages

commit 1002762883a217da9589a62cc83461377002db2e
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Wed Jun 30 10:50:02 2021 +0300

    WDZO-2164: fix visible business role date in new form business role

commit c8d9c85d6fa4b5e4842343e68ecd3b4e970a0484
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Tue Jun 29 14:57:14 2021 +0300

    WDZO-2164: update constants and tests

commit 5279ce73fe47bc9ddcfdfb7ef18f8c302209790c
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Tue Jun 29 10:14:55 2021 +0300

    WDZO-2164: add BusinessRoleForm and BusinessRoleInfo tests, update BusinessRoleForm Component

commit 35d0a75637ea81f6500cb5e542017075d2419535
Merge: 1971c7f 875aa82
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Tue Jun 29 10:09:02 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-2164

commit 1971c7facdd23d5aa085dfc3d6c68d31636d0c7f
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Fri Jun 25 16:23:22 2021 +0300

    WDZO-2164: fix bugs

commit 23f665cec217b8b7cc20fbcbe80309e89e822f2e
Merge: bb77087 fc0425f
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Fri Jun 25 15:25:48 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-2164

commit bb770876c341103e8474d6d5dc8efbccc5a7ad75
Author: OUT-Sukhorukov-

--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,11 @@ input.ant-input:placeholder-shown ~ .ant-input-suffix .anticon-close-circle {
 .ck.ck-editor__main ul {
     padding-inline-start: 40px;
 }
+
+.ant-table-tbody {
+    vertical-align: top;
+}
+
+.ant-table-selection-column {
+    vertical-align: middle;
+}
