Pull request #265: WDZO-2271: add component for select some tags and trigger onChange after close.
Squashed commit of the following:

commit e565c58eb6049bafe05c286dafd52e3b01b047a1
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Jul 16 09:17:23 2021 +0300

    WDZO-2271: add component for select some tags and trigger onChange after close. some fixes

--- a/src/components/SelectTags/SelectTags.module.css
+++ b/src/components/SelectTags/SelectTags.module.css
@@ -33,7 +33,7 @@
 }
 
 .select :global(.ant-select-selection-overflow) {
-    max-width: 85%;
+    max-width: calc(100% - 70px);
 }
 /*  /select */
 
