Pull request #290: WDZO-1393: add clientApp themes and change header texts
Squashed commit of the following:

commit 9574dc3312fa47cb6d7f86d9bd9e37a91ed66564
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Aug 27 16:02:38 2021 +0300

    WDZO-1393: move save btn to top

commit da6966f257c96d8d8c17816e249bb0636a18ada2
Merge: 5089e824 731a55dd
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Aug 27 15:56:44 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-1393

commit 5089e8241f85853c022cc642f5143afceab113eb
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Aug 26 18:19:04 2021 +0300

    WDZO-1393: add theme images with right dirictory name

commit 3d29b702d39c972a0b9512d792df536f73effe12
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Thu Aug 26 18:15:02 2021 +0300

    WDZO-1393: refactoring. delete theme images for rename dirictory

commit c6187254ba82538968dd42ffe35d12c955b37e7e
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Thu Aug 26 13:56:25 2021 +0300

    WDZO-1393: hid the description on the main page for all tabs, fix bugs, refactor tests

commit 9feb70df4e382ab68d7b9dadbedf80619b6fb812
Author: OUT-Sukhorukov-GV <GVSukhorukov@sberbank.ru>
Date:   Mon Aug 23 13:42:17 2021 +0300

    WDZO-1393: fix audit page

commit e27c1120bc25b45c8adcaa4c5005902df390e011
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Aug 23 12:55:05 2021 +0300

    WDZO-1393: refactoring for clientApp themes

commit beed8fdc796d3ffd68ab82fb9d4409365adb751d
Merge: 99000eb4 72812532
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Mon Aug 23 10:57:24 2021 +0300

    Merge branch 'develop' of https://stash.sigma.sbrf.ru/scm/mobiledevprojects/distributor-admin into feature/WDZO-1393

commit 99000eb4973178afb4bd9f15ecb6aa18cbc1c17e
Merge: fed0bf9d 8000b927
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Tue Aug 10 09:54:41 2021 +0300

    Merge branch 'develo

--- a/src/containers/ClientAppPage/ClientAppForm/MainPageDesign/MainPageDesign.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/MainPageDesign/MainPageDesign.module.css
@@ -10,7 +10,7 @@
 }
 
 .buttonGroup {
-    margin-top: 15px;
+    margin-bottom: 15px;
     margin-left: 15px;
 }
 
@@ -18,8 +18,62 @@
     padding-bottom: 30px;
 }
 
-.container > div{
+.container > div {
     align-items: flex-start !important;
+}
+
+.default {
+    background-image: linear-gradient(
+        228.35deg,
+        #eaef00 7.94%,
+        #cbea0a 15.79%,
+        #9cdd16 21.25%,
+        #5dca23 28.58%,
+        #00b944 38.54%,
+        #00a3a7 57.42%,
+        #009bc5 64.31%,
+        #0096d3 67.8%,
+        #018fdb 72.33%,
+        #0489d6 76.41%,
+        #047fcf 82.5%,
+        #0073c8 87.4%,
+        #0051b7 99.87%
+    );
+}
+
+.defenderFatherlandDay {
+    background-image: linear-gradient(
+        262.6deg,
+        #9cdd16 -9.99%,
+        #84e73b 7.47%,
+        #7dea44 13.24%,
+        #18cd6d 32.14%,
+        #06ac9a 43.29%,
+        #00a3a7 51.61%,
+        #00a0b2 57.73%,
+        #0098b6 67.72%,
+        #0073c8 90.72%
+    );
+}
+
+.summer {
+    background-image: linear-gradient(239.39deg, #ffeb37 -8.62%, #ff9839 36.53%, #fd6f4c 58.9%, #eb0457 90.81%);
+}
+
+.victoryDay {
+    background-image: linear-gradient(
+        269.16deg,
+        #9cdd16 -22.29%,
+        #7dea44 -0.03%,
+        #1dd661 17.89%,
+        #00a3a7 94.22%,
+        #009bc5 133.03%,
+        #0073c8 153.43%
+    );
+}
+
+.womensDay {
+    background-image: linear-gradient(226.93deg, #ffeb37 5.76%, #ff8c39 52.43%, #f01d71 99.68%);
 }
 
 
