--- a/src/containers/ClientAppPage/ClientAppForm/MainPageDesign/SettingPageModal/SettingPageModal.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/MainPageDesign/SettingPageModal/SettingPageModal.module.css
@@ -1,3 +1,8 @@
+.modal :global(.ant-modal-body) {
+    max-height: 600px;
+    overflow: auto;
+}
+
 .imageBlock {
     position: relative;
     cursor: pointer;
