TND-6750: add attribute UUID for referals
TND-6750: delete generateUuid param at creating user

TND-6750: fix consentId can't be not null

TND-5918: disable product offer field

TND-5918: add mechanic "4ЕКОМ" to clientApps

TND-5918: fix type error

TND-5918: fix setting data

TND-5918: change all_presents_selected logic

TND-5918: cancel all_presents_selected logic change

TND-5918: fix send param all_presents_selected when clientApp edit

TND-5918: add request on add setting all_presents_selected if not exist

TND-5918: fix all_presents_selected setting

TND-5918: change variables naming

--- a/src/containers/UsersPage/UserPage/UserForm.module.css
+++ b/src/containers/UsersPage/UserPage/UserForm.module.css
@@ -87,6 +87,13 @@
     max-width: unset;
 }
 
+.uuidBlock {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 68%;
+    max-width: unset;
+}
+
 .buttonsContainer {
     display: flex;
     margin-top: 25px;
