--- a/src/containers/ClientAppPage/ClientAppForm/MainPageDesign/MainPageDesign.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/MainPageDesign/MainPageDesign.module.css
@@ -1,10 +1,10 @@
 .container {
     margin-left: 15px;
     background-color: #f8f8f8;
-    padding: 20px;
-    padding-bottom: 8px;
+    padding: 20px 20px 8px;
     margin-right: 30px;
 }
+
 .wrapper {
     position: relative;
 }
@@ -20,6 +20,22 @@
 
 .container > div {
     align-items: flex-start !important;
+}
+
+.coffee {
+    background-image: linear-gradient(
+            232.36deg,
+            #EAEF00 -4.19%,
+            #CBEA0A 5.24%,
+            #9CDD16 16.91%,
+            #5DCA23 30.18%,
+            #00B944 42.72%,
+            #00A3A7 56.96%,
+            #009BC5 64.66%,
+            #0489D6 76.22%,
+            #047FCF 83.71%,
+            #0073C8 101.21%
+    );
 }
 
 .default {
@@ -54,6 +70,10 @@
         #0098b6 67.72%,
         #0073c8 90.72%
     );
+}
+
+.greenDay {
+    background-image: linear-gradient(270deg, #02436D -12.37%, #2BA54D 15.56%, #27A844 33.94%, #056690 69.98%, #062C48 103.58%);
 }
 
 .summer {
