Pull request #316: TND-5175: add feature for editing the authorization method
Merge in MOBILEDEVPROJECTS/distributor-admin from feature/TND-5175 to develop

Squashed commit of the following:

commit 727693920662cedc901142c632757c8818444fb4
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Wed Nov 10 16:15:37 2021 +0300

    TND-5175: refactor catch block

commit 6972c1389be63b00efa65db20d3a096689600372
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Wed Nov 10 13:58:40 2021 +0300

    TND-5175: fix error handling

commit b34b96d3b39de430dffcb5b342b11bb075476844
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Mon Nov 8 13:38:56 2021 +0300

    TND-5175: discard .env.development changes

commit a436926e058ab0aaab077c88ab56c3f1687fbd0d
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Wed Nov 3 17:00:23 2021 +0300

    TND-5175: add feature for editing the authorization method

--- a/src/containers/UsersPage/UserPage/UserMultiEdit/UserMultiEdit.module.css
+++ b/src/containers/UsersPage/UserPage/UserMultiEdit/UserMultiEdit.module.css
@@ -47,3 +47,15 @@
 .buttonsContainer :global(.ant-btn[disabled]) {
     color: #ebe8e8 !important;
 }
+
+.select {
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    min-width: 240px;
+    max-width: 300px;
+}
+
+.select label {
+    margin-bottom: 8px;
+}
