--- a/src/containers/ClientAppPage/ClientAppForm/MainPageDesign/MainPageDesign.module.css
+++ b/src/containers/ClientAppPage/ClientAppForm/MainPageDesign/MainPageDesign.module.css
@@ -4,6 +4,9 @@
     padding: 20px 20px 8px;
     margin-right: 30px;
 }
+.container + .container {
+    margin-top: 16px;
+}
 
 .wrapper {
     position: relative;
