--- a/src/containers/UsersPage/UserPage/UsersList/FiltrationBlock/FiltrationBlock.module.css
+++ b/src/containers/UsersPage/UserPage/UsersList/FiltrationBlock/FiltrationBlock.module.css
@@ -13,7 +13,9 @@
 
 .filterBlock {
     display: flex;
+    flex-wrap: wrap;
     column-gap: 15px;
+    row-gap: 15px;
     align-items: center;
 }
 
