--- a/src/containers/UsersPage/UserPage/UsersList/FiltrationBlock/FiltrationBlock.module.css
+++ b/src/containers/UsersPage/UserPage/UsersList/FiltrationBlock/FiltrationBlock.module.css
@@ -23,6 +23,14 @@
     width: 220px;
 }
 
+.filterItem :global(.ant-select-clear) {
+    top: 10px;
+    right: 5px !important;
+    opacity: 1 !important;
+    width: unset;
+    height: unset;
+}
+
 .filterItem:first-child {
     width: 250px;
 }
